# DPAL

./: .gitignore  README.md  pyproject.toml  requirements.txt
code/: train.py
code/datasets/: __init__.py
code/datasets/chexpert/: create_memmap.py  dataset.py  split_resize.py
code/datasets/snli/: dataset.py  load_dataset.py
code/dp_al/: active_learning.py  dp_utils.py  modes.py  privacy_engine.py
code/dp_al/al_methods/: __init__.py  al_utils.py  bald.py  confidence.py  entropy.py  margin.py
code/models/: EqResNet9.py  NFNet.py  ResNet.py  __init__.py
code/models/equivariant/: layers.py
code/models/equivariant/group_theory/groups/: cyclicgroup.py  dihedralgroup.py  group.py  o2group.py  so2group.py  utils.py
code/models/equivariant/group_theory/kernels/: polar_basis.py  r2.py  steerable_basis.py  steerable_filters_basis.py  wignereckart_solver.py
code/models/equivariant/group_theory/operations/: homspace.py  numerical.py
code/models/equivariant/group_theory/representations/: irrep.py  (+1 more)
code/models/equivariant/nn/: field_type.py  group_tensor.py  gspace.py  r2.py
code/models/nfnets/: model.py  pretrained.py
code/scripts/: entropy.sh  entropyBlood.sh  entropyChex.sh  entropyOct.sh  entropySNLI.sh  random.sh  randomBlood.sh  randomChex.sh  randomOct.sh  randomSNLI.sh
code/utils/: arg_utils.py  ddp_utils.py  initialize.py  logging.py  metrics.py  train_loop.py
opacus/: setup.py
opacus/opacus/: data_loader.py
opacus/opacus.egg-info/: PKG-INFO  SOURCES.txt
opacus/opacus/grad_sample/: functorch.py
opacus/opacus/utils/: uniform_sampler.py
(+37 files in other folders)
