[project]
name = "dpal"
version = "0.1.0"
description = "Differentially Private Active Learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dill>=0.4.0",
    "dm-haiku>=0.0.14",
    "einops>=0.8.1",
    "jax>=0.5.3",
    "matplotlib>=3.10.3",
    "medmnist>=3.0.2",
    "opacus",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "torchmetrics>=1.7.4",
    "tqdm>=4.67.1",
    "transformers>=4.53.3",
]

[tool.uv.sources]
opacus = { path = "opacus", editable = true }
